# square-db

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.toml  generate_tls.txt  readme.md  test.sh
.github/workflows/: rust.yml
data/tables/0/: user
src/: main.rs
src/activator/: activator.rs  mod.rs
src/cache/: cache.rs
src/cli/: cli.rs
src/command/: command.rs
src/config/: config.rs
src/datatypes/: datatypes.rs  mod.rs
src/defaults/: defaults.rs
src/encryptor/: encryptor.rs  key.rs  mod.rs
src/entry/: entry.rs  mod.rs
src/env/: env.rs
src/err/: mod.rs
src/fm/: fm.rs  mod.rs
src/load/: disk.rs
src/log/: log.rs  mod.rs
src/operation/: createcmd.rs  mod.rs  operation.rs
src/panic/: mod.rs
src/response/: cmd_responses.rs  mod.rs  process_responses.rs  response.rs  response_code.rs  responsecodes.rs  responses.rs
src/server/: endpoint.rs  mod.rs  server.rs  server_rustls.rs
src/session/: global_session.rs  mod.rs  session.rs
src/state/: mod.rs
src/table/: table.rs
tests/: test_entry.rs
