[package]
name = "squaredb"
version = "1.0.0-beta22"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
lazy_static = "1.4.0"
structopt = { version = "0.3", default-features = true }
dotenv = "0.15.0"
squaredb_fm = "1.0.0-beta"
actix-web = { version = "4.5.1", features=["actix-tls"] }
parking_lot = "0.12.1"
actix-governor = "0.5.0"
rustls = "0.22.2"
rustls-pemfile = "1"