[package]
name = "squaredb"
version = "1.0.0-beta22"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
lazy_static = "1.4.0"
structopt = { version = "0.3", default-features = true }
dotenv = "0.15.0"
actix-web = { version = "4.5.1", features=["actix-tls", "rustls-0_22"] }
parking_lot = "0.12.1"
actix-governor = "0.5.0"
rustls = "0.22.2"
rustls-pemfile = "1"
rcgen = "0.12.1"
thiserror = "1.0.60"
aes-gcm = "0.10.3"
bcrypt = "0.15.1"
pbkdf2 = { version = "0.12.2", features = ["password-hash", "simple"] }
rand = "0.8.5"
log = "0.4.21"
env_logger = "0.11.3"
backtrace = "0.3.71"
